--- a/app/views/inc/footer.ejs
+++ b/app/views/inc/footer.ejs
@@ -115,7 +115,7 @@
 
   <!-- Copyright -->
   <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
-    © <a class="text-reset fw-bold" href="https://www.notscrapyet.com">Not Scrap Yet</a> <?php echo date("Y"); ?>
+    &#169; 2023 Not Scrap Yet, a <a href="https://www.comtily.com">Comtily</a> product.
   </div>
   <!-- Copyright -->
 </footer>
