--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -2,7 +2,7 @@
 
             <div class="row">
                 <div class="col">
-                    <form method="GET" action="results.php">
+                    <form method="GET" action="/results">
                         <div class="mb-3 text-center">
                             <label id="makes_label" for="makes" class="form-label">Make</label>
                             <select id="makes_select" name="makes_select" class="form-select" aria-label="Makes" >
