refactor for local testing

--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -1,67 +1,86 @@
 <%- include('inc/header.ejs') %>
 
-            <div class="row">
-                <div class="col">
-                    <form method="GET" action="/results">
-                        <div class="mb-3 text-center">
-                            <label id="makes_label" for="makes" class="form-label">Make</label>
-                            <select id="makes_select" name="makes_select" class="form-select" aria-label="Makes" >
-                                <option value="0">ALL MAKES</option>
-                                <% autoMakes.forEach((makes) => { %>
-                                <option value="<%=makes%>"><%=makes%></option>
-                                <% }) %>
-                            </select>
-                            <label id="models_label" for="models" class="form-label">Model</label>
-                            <select id="models_select" name="models_select" class="form-select" aria-label="Models" disabled><option value="0">ALL MODELS</option></select>
-                            <label id="postal_code_label" for="postal_code" class="form-label">Postal Code</label>
-                            <input id="postal_code" type="text" class="form-class" aria-label="Postal Code" size="7" />
-                            <button id="submit" type="submit" class="btn btn-primary">Submit</button>
-                        </div>
-                    </form>
+<%
+const nextYear = new Date().getFullYear() + 1
+%>
+
+<div class="d-flex align-items-center justify-content-center">
+    <form class="row row-cols-lg-auto g-3 position-relative" method="GET" action="search">
+        <label id="makes_label" for="makes" class="col-sm-2 col-form-label">Make</label>
+        <div class="col-auto">
+
+            <select id="makes_select" name="make" class="form-select" aria-label="Makes" >
+                <option value="0">ALL MAKES</option>
+                <% autoMakes.forEach((makes) => { %>
+                <option value="<%=makes%>"><%=makes%></option>
+                <% }) %>
+            </select>
+        </div>
+        <label id="models_label" for="models" class="col-sm-2 col-form-label">Model</label>
+        <div class="col-auto">
+            <select id="models_select" name="model" class="form-select" aria-label="Models"><option value="0">ALL MODELS</option></select>
+        </div>
+        <label id="postal_code_label" for="postal_code" class="col-sm-2 col-form-label">Postal Code</label>
+        <div class="col-auto">
+            <input id="postal_code" name="postal" type="text" class="form-control" aria-label="Postal Code" size="7" maxlength="5" autocomplete="postal-code" pattern="^([0-9]{5})$" required />
+            </div>
+        <div class="col-auto">
+            <button id="submit" type="submit" class="btn btn-primary">Submit</button>
+        </div>
+        <input type="hidden" id="distance" name="distance" value="10" />
+        <input type="hidden" id="min_price" name="min_price" value="0" />
+        <input type="hidden" id="max_price" name="max_price" value="9999999" />
+        <input type="hidden" id="min_year" name="min_year" value="1992" />
+        <input type="hidden" id="max_year" name="max_year" value="<%=nextYear%>" />
+        <input type="hidden" id="min_mileage" name="min_mileage" value="0" />
+        <input type="hidden" id="max_mileage" name="max_mileage" value="9999999" />
+    </form>
+</div><br />
+
+<div class="row">
+    <div class="col text-center">
+        <span class="badge rounded-pill bg-primary">
+            There <% if (adcount > 1) { %> are <%=adcount%> listings <% } else { %> is <%=adcount%> listing <% } %>
+            from <% if (dealercount > 1) { %> <%=dealercount%> dealers<% } else { %> <%=dealercount%> dealer<% } %>.
+        </span>
+    </div>
+</div><br />
+
+<%
+let col = 0
+results.forEach((result) => {
+%>
+    <% if (col == 0) { %>
+        <div class="row">
+            <div class="card-group">
+    <% } %>
+        <div class="col-sm d-flex align-items-stretch">
+            <div class="card border-primary">
+                <div class="card-img-top" style="min-height: 318px;">
+                    <a href="listing?id=<%=result._id%>"><img src="<%=result.images[0]%>" width="100%" /></a>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col text-center">There are <%=adcount%> listings from <%=dealercount%> dealers.<br /><br /></div>
-            </div>
-            <%
-            let col = 0
-            results.forEach((result) => {
-                image_arr = result.auto_images.split(',h')
-            %>
-                <% if (col == 0) { %> 
-                    <div class="row">
-                <% } %>
-                    <div class="col-sm">
-                        <div class="card border-primary">
-                            <div class="card-img-top">
-                                <div class="embed-responsive embed-responsive-4by3">
-                                    <div class="embed-responsive-item">
-                                        <a href="listing?id="><img src="<%=image_arr[0]%>" width="100%" /></a>
-                                    </div>
-                                </div>
-                            </div>
 
-                            <div class="card-body">
-                                <a href="listing?id=">
-                                    <h5 class="card-title"><%=result.auto_year%> <%=result.auto_make%> <%=result.auto_model%></h5>
-                                </a>
-                                <p class="card-text">Mileage: <%=result.auto_odometer%><br />Price: $ <%=result.auto_price%></p>
-                                <a href="listing?id=" class="btn btn-primary">More Info</a>
-                            </div>
+                <div class="card-body">
+                    <a href="listing?id=<%=result._id%>">
+                        <h5 class="card-title"><%=result.year%> <%=result.make%> <%=result.model%></h5>
+                    </a>
+                    <p class="card-text">Mileage: <%=result.odometer%><br />Price: $ <%=result.price%></p>
+                    <a href="listing?id=<%=result._id%>" class="btn btn-primary">More Info</a>
+                </div>
 
-                        </div>
-                    </div>
-            
-                <% 
-                if (col == 2) {
-                    col = 0;
-                %>
-                    </div>
-                <%
-                } else {
-                    col++
-                }
-                %>
-            <% }) %>
-              
+            </div>
+        </div>
+
+    <%
+    if (col == 2) {
+        col = 0;
+    %>
+        </div></div>
+    <%
+    } else {
+        col++
+    }
+    %>
+<% }) %>
+
 <%- include('inc/footer.ejs') %>
